// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text field should render disabled input 1`] = `
<FieldTemplate
  description="my text input hint"
  errorMessage="My error message"
  id="myForm"
  isValid={true}
  label="My input title"
  labelAfter={true}
>
  <input
    autoFocus={true}
    className="form-control"
    disabled={true}
    id="myForm"
    label="My input title"
    onChange={[Function]}
    placeholder="Type something here"
    readOnly={false}
    type="text"
    value="toto"
  />
</FieldTemplate>
`;

exports[`Text field should render input 1`] = `
<FieldTemplate
  description="my text input hint"
  errorMessage="My error message"
  id="myForm"
  isValid={true}
  label="My input title"
  labelAfter={true}
>
  <input
    autoFocus={true}
    className="form-control"
    disabled={false}
    id="myForm"
    label="My input title"
    onChange={[Function]}
    placeholder="Type something here"
    readOnly={false}
    type="text"
    value="toto"
  />
</FieldTemplate>
`;

exports[`Text field should render password input 1`] = `
<FieldTemplate
  description="my text input hint"
  errorMessage="My error message"
  id="myForm"
  isValid={true}
  label="My input title"
  labelAfter={true}
>
  <input
    autoFocus={true}
    className="form-control"
    disabled={false}
    id="myForm"
    label="My input title"
    onChange={[Function]}
    placeholder="Type something here"
    readOnly={false}
    type="password"
    value="toto"
  />
</FieldTemplate>
`;

exports[`Text field should render readonly input 1`] = `
<FieldTemplate
  description="my text input hint"
  errorMessage="My error message"
  id="myForm"
  isValid={true}
  label="My input title"
  labelAfter={true}
>
  <input
    autoFocus={true}
    className="form-control"
    disabled={false}
    id="myForm"
    label="My input title"
    onChange={[Function]}
    placeholder="Type something here"
    readOnly={true}
    type="text"
    value="toto"
  />
</FieldTemplate>
`;
